@@ -1,14 +1,0 @@
-(*  Title:   Tools/Permanent_Interpretation.thy
-    Author:  Florian Haftmann, TU Muenchen
-*)
-
-section {* Permanent interpretation accompanied with mixin definitions. *}
-
-theory Permanent_Interpretation
-imports Pure
-keywords "defining" and "permanent_interpretation" :: thy_goal
-begin
-
-ML_file "~~/src/Tools/permanent_interpretation.ML"
-
-end
